# GP-chat_With_Streamlit

./: .gitignore  CHANGELOG.md  README.md  START copy.bat  START.bat  install.bat  pyproject.toml  requirements.txt  sample_of.env
dev/: sample_of_fault_injection.local.toml
for_agent/: software-sheet.md
prompts/: prompts.yaml
src/gp_chat/: azure_code_agent.py  azure_common_types.py  azure_context_builder.py  azure_fault_injection.py  azure_history_utils.py  azure_normal_chat.py  azure_reasoning_agent.py  azure_report_agent.py  azure_research_agent.py  azure_responses_router.py  azure_runtime.py  azure_supervisor_helpers.py  cloud_logging_utils.py  code_agent.py  config.py  config.yaml  data_manager.py  execution_engine.py  main.py  pptx_agent.py  prompts.yaml  reasoning_agent.py  report_agent.py  research_agent.py  sidebar.py  state_manager.py  utils.py
