[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gp-chat"
version = "0.1.2"
description = "GP-chat with Streamlit"
authors = [
    { name = "yoichi-1984", email = "yoichi.1984.engineer@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.52.2",
    "google-genai==1.56.0",
    "python-dotenv==1.2.1",
    "streamlit-ace==0.1.1",
    "build==1.3.0",
    "pylint==4.0.4",
    "PyYAML==6.0.3",
    "python-docx==1.2.0",
    "pywin32==311"
]

[project.scripts]
gp-chat = "gp_chat.main_runner:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gp_chat = ["*.yaml"]