[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gp-chat"
version = "0.6.6"
description = "GP-chat with Streamlit"
authors = [
    { name = "yoichi-1984", email = "yoichi.1984.engineer@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.52.2",
    "google-genai==2.4.0",
    "google-auth==2.53.0",
    "google-cloud-logging==3.15.0",
    "python-dotenv==1.2.1",
    "streamlit-ace==0.1.1",
    "pylint==4.0.4",
    "PyYAML==6.0.3",
    "python-docx==1.2.0",
    "pywin32==311; sys_platform == 'win32'",
    "pillow==11.1.0",
    "pandas==2.3.3",
    "matplotlib==3.10.8",
    "openai>=2.45.0",
    "openpyxl>=3.1.2",
    "xlrd>=2.0.1",
    "python-calamine>=0.2.0",
    "tabulate>=0.9.0",
    "python-pptx>=1.0.2",
    "playwright>=1.49.0"
]

[project.scripts]
gp-chat = "gp_chat.main_runner:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gp_chat = ["*.yaml", "*.pptx"]